# NA1SS-SATL

./: README.md
SpaceStation/: .gitattributes  pyvenv.cfg  satelite.py  stations.txt  talk.py  test.py
SpaceStation/c_sat/: CMakeLists.txt  main.cpp
SpaceStation/sat_iis/: CMakeLists.txt
SpaceStation/sat_iis/src/: main.cpp
